# chad

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: canary.yml  codeql.yml  publish.yml  security.yml  tests.yml
benchmarks/tb2/: README.md  harbor_chad_tb2.py  quantize_q6.py  run_repeated.sh  run_tb2.sh  run_tb21_submit.sh  serve_q6.sh  validate_atif.py
docs/: benchmarks.md  configuration.md  demo.tape  design.md  tbench_chart.py  troubleshooting.md
scripts/: kv_ram_probe.py  prefill_tax.py  ram_safety_check.py
src/chad/: __init__.py  agent.py  atif.py  base_engine.py  bench.py  cli.py  compaction.py  completion_engine.py  config.py  diag.py  engine.py  guardrails.py  ignore.py  levers.py  lsp.py  mcp.py  mcp_oauth.py  mlx_fastpath.py  mlx_qsdpa.py  openai_engine.py  profiles.py  prompt.py  prove.py  render.py  repomap.py  serve.py  session.py  skills.py  symbols.py  syntaxgate.py  toolcall_parse.py  tools.py  tui.py  validate.py
tests/: conftest.py  test_agent.py  test_agent_e2e.py  test_agent_guards.py  test_atif.py  test_bench.py  test_cli.py  test_compact_notice.py  test_compaction.py  test_completion_engine.py  test_config.py  test_confirm_preview.py  test_done_audit.py  test_drift_warn.py  test_edit.py  test_edit_corruption.py  test_engine.py  test_engine_kvquant.py  test_feel_pack.py  test_garble_invariant.py  test_gate.py  test_ignore.py  test_intent.py  test_lever_bite.py  test_levers.py  test_log_redaction.py  test_lsp.py  test_mcp.py  test_mcp_oauth.py  test_mlx_fastpath.py  test_mlx_qsdpa.py  test_openai_engine.py  test_plan_review.py  test_prove.py  test_render.py  test_replace_lines.py  test_repomap.py  test_serve.py  test_session.py  test_skills.py  (+7 more)
